--- a/index (2).html
+++ b/index (2).html
@@ -39,6 +39,6 @@
 			</div>
 		</div>
 		<div class="countries"></div>
-		<script src="./index.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
